src/objects/FacebookApp__c.object
<CustomObject>
    <fields>
        <fullName>clientID__c</fullName>
        <inlineHelpText>Also know as the Application ID</inlineHelpText>
        <label>clientID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clientSecret__c</fullName>
        <inlineHelpText>Also known as Application Secret</inlineHelpText>
        <label>clientSecret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extendedPermissions__c</fullName>
        <inlineHelpText>When a Facebook user authorizes your application, your application gets access to the user. By default, your application can access all public data in a user&apos;s profile. If you need to access other parts of the profile you must request extended permissions</inlineHelpText>
        <label>Extended Permissions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Facebook App</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FacebookApp Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facebook Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>